Create monthly surgerical data

--- a/hospital/preprocess_city.ipynb
+++ b/hospital/preprocess_city.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get Monthly data where column \"Monthly\" is \"Total\"\n",
-    "city_data_total = city_data[city_data['Hospital Location'] == 'Total']"
+    "city_data_total = city_data[city_data['Hospital Location'] == 'Total']\n",
+    "seoul_data = city_data[city_data['Hospital Location'] == 'Seoul']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +129,7 @@
        "Name: Reference Surgery, Length: 2376, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -155,290 +156,42 @@
        "set()"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set(city_data_total[\"Reference Surgery\"].values) - set(february_data[\"Reference Surgery\"].values)"
+    "set(city_data_total[\"Reference Surgery\"].values) - set(seoul_data[\"Reference Surgery\"].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dict = {}\n",
     "# data_dict[\"Total\"] = None\n",
-    "for month in monthly_data[\"Monthly\"].unique():\n",
+    "for month in city_data[\"Hospital Location\"].unique():\n",
     "    data_dict[month] = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'2006_January': None,\n",
-       " '2006_February': None,\n",
-       " '2006_March': None,\n",
-       " '2006_April': None,\n",
-       " '2006_May': None,\n",
-       " '2006_June': None,\n",
-       " '2006_July': None,\n",
-       " '2006_August': None,\n",
-       " '2006_September': None,\n",
-       " '2006_October': None,\n",
-       " '2006_November': None,\n",
-       " '2006_December': None,\n",
-       " '2007_January': None,\n",
-       " '2007_February': None,\n",
-       " '2007_March': None,\n",
-       " '2007_April': None,\n",
-       " '2007_May': None,\n",
-       " '2007_June': None,\n",
-       " '2007_July': None,\n",
-       " '2007_August': None,\n",
-       " '2007_September': None,\n",
-       " '2007_October': None,\n",
-       " '2007_November': None,\n",
-       " '2007_December': None,\n",
-       " '2008_January': None,\n",
-       " '2008_February': None,\n",
-       " '2008_March': None,\n",
-       " '2008_April': None,\n",
-       " '2008_May': None,\n",
-       " '2008_June': None,\n",
-       " '2008_July': None,\n",
-       " '2008_August': None,\n",
-       " '2008_September': None,\n",
-       " '2008_October': None,\n",
-       " '2008_November': None,\n",
-       " '2008_December': None,\n",
-       " '2009_January': None,\n",
-       " '2009_February': None,\n",
-       " '2009_March': None,\n",
-       " '2009_April': None,\n",
-       " '2009_May': None,\n",
-       " '2009_June': None,\n",
-       " '2009_July': None,\n",
-       " '2009_August': None,\n",
-       " '2009_September': None,\n",
-       " '2009_October': None,\n",
-       " '2009_November': None,\n",
-       " '2009_December': None,\n",
-       " '2010_January': None,\n",
-       " '2010_February': None,\n",
-       " '2010_March': None,\n",
-       " '2010_April': None,\n",
-       " '2010_May': None,\n",
-       " '2010_June': None,\n",
-       " '2010_July': None,\n",
-       " '2010_August': None,\n",
-       " '2010_September': None,\n",
-       " '2010_October': None,\n",
-       " '2010_November': None,\n",
-       " '2010_December': None,\n",
-       " '2011_January': None,\n",
-       " '2011_February': None,\n",
-       " '2011_March': None,\n",
-       " '2011_April': None,\n",
-       " '2011_May': None,\n",
-       " '2011_June': None,\n",
-       " '2011_July': None,\n",
-       " '2011_August': None,\n",
-       " '2011_September': None,\n",
-       " '2011_October': None,\n",
-       " '2011_November': None,\n",
-       " '2011_December': None,\n",
-       " '2012_January': None,\n",
-       " '2012_February': None,\n",
-       " '2012_March': None,\n",
-       " '2012_April': None,\n",
-       " '2012_May': None,\n",
-       " '2012_June': None,\n",
-       " '2012_July': None,\n",
-       " '2012_August': None,\n",
-       " '2012_September': None,\n",
-       " '2012_October': None,\n",
-       " '2012_November': None,\n",
-       " '2012_December': None,\n",
-       " '2013_January': None,\n",
-       " '2013_February': None,\n",
-       " '2013_March': None,\n",
-       " '2013_April': None,\n",
-       " '2013_May': None,\n",
-       " '2013_June': None,\n",
-       " '2013_July': None,\n",
-       " '2013_August': None,\n",
-       " '2013_September': None,\n",
-       " '2013_October': None,\n",
-       " '2013_November': None,\n",
-       " '2013_December': None,\n",
-       " '2014_January': None,\n",
-       " '2014_February': None,\n",
-       " '2014_March': None,\n",
-       " '2014_April': None,\n",
-       " '2014_May': None,\n",
-       " '2014_June': None,\n",
-       " '2014_July': None,\n",
-       " '2014_August': None,\n",
-       " '2014_September': None,\n",
-       " '2014_October': None,\n",
-       " '2014_November': None,\n",
-       " '2014_December': None,\n",
-       " '2015_January': None,\n",
-       " '2015_February': None,\n",
-       " '2015_March': None,\n",
-       " '2015_April': None,\n",
-       " '2015_May': None,\n",
-       " '2015_June': None,\n",
-       " '2015_July': None,\n",
-       " '2015_August': None,\n",
-       " '2015_September': None,\n",
-       " '2015_October': None,\n",
-       " '2015_November': None,\n",
-       " '2015_December': None,\n",
-       " '2016_January': None,\n",
-       " '2016_February': None,\n",
-       " '2016_March': None,\n",
-       " '2016_April': None,\n",
-       " '2016_May': None,\n",
-       " '2016_June': None,\n",
-       " '2016_July': None,\n",
-       " '2016_August': None,\n",
-       " '2016_September': None,\n",
-       " '2016_October': None,\n",
-       " '2016_November': None,\n",
-       " '2016_December': None,\n",
-       " '2017_January': None,\n",
-       " '2017_February': None,\n",
-       " '2017_March': None,\n",
-       " '2017_April': None,\n",
-       " '2017_May': None,\n",
-       " '2017_June': None,\n",
-       " '2017_July': None,\n",
-       " '2017_August': None,\n",
-       " '2017_September': None,\n",
-       " '2017_October': None,\n",
-       " '2017_November': None,\n",
-       " '2017_December': None,\n",
-       " '2018_January': None,\n",
-       " '2018_February': None,\n",
-       " '2018_March': None,\n",
-       " '2018_April': None,\n",
-       " '2018_May': None,\n",
-       " '2018_June': None,\n",
-       " '2018_July': None,\n",
-       " '2018_August': None,\n",
-       " '2018_September': None,\n",
-       " '2018_October': None,\n",
-       " '2018_November': None,\n",
-       " '2018_December': None,\n",
-       " '2019_January': None,\n",
-       " '2019_February': None,\n",
-       " '2019_March': None,\n",
-       " '2019_April': None,\n",
-       " '2019_May': None,\n",
-       " '2019_June': None,\n",
-       " '2019_July': None,\n",
-       " '2019_August': None,\n",
-       " '2019_September': None,\n",
-       " '2019_October': None,\n",
-       " '2019_November': None,\n",
-       " '2019_December': None,\n",
-       " '2020_January': None,\n",
-       " '2020_February': None,\n",
-       " '2020_March': None,\n",
-       " '2020_April': None,\n",
-       " '2020_May': None,\n",
-       " '2020_June': None,\n",
-       " '2020_July': None,\n",
-       " '2020_August': None,\n",
-       " '2020_September': None,\n",
-       " '2020_October': None,\n",
-       " '2020_November': None,\n",
-       " '2020_December': None,\n",
-       " '2021_January': None,\n",
-       " '2021_February': None,\n",
-       " '2021_March': None,\n",
-       " '2021_April': None,\n",
-       " '2021_May': None,\n",
-       " '2021_June': None,\n",
-       " '2021_July': None,\n",
-       " '2021_August': None,\n",
-       " '2021_September': None,\n",
-       " '2021_October': None,\n",
-       " '2021_November': None,\n",
-       " '2021_December': None,\n",
-       " '2022_January': None,\n",
-       " '2022_February': None,\n",
-       " '2022_March': None,\n",
-       " '2022_April': None,\n",
-       " '2022_May': None,\n",
-       " '2022_June': None,\n",
-       " '2022_July': None,\n",
-       " '2022_August': None,\n",
-       " '2022_September': None,\n",
-       " '2022_October': None,\n",
-       " '2022_November': None,\n",
-       " '2022_December': None}"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "year_columns = monthly_data.columns[4:-2]\n",
+    "year_columns = city_data.columns[5:-2]\n",
     "year_columns\n",
     "\n",
-    "monthly_dict = {}\n",
+    "yearly_dict = {}\n",
     "\n",
     "for year in year_columns:\n",
-    "    for month in monthly_data[\"Monthly\"].unique():\n",
-    "        if month == \"Total\":\n",
-    "            continue\n",
-    "        monthly_dict[year + \"_\" + month] = None\n",
+    "    yearly_dict[year] = None\n",
     "\n",
-    "monthly_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12    NaN\n",
-       "13    NaN\n",
-       "14    NaN\n",
-       "15    NaN\n",
-       "16    NaN\n",
-       "       ..\n",
-       "211   NaN\n",
-       "212   NaN\n",
-       "213   NaN\n",
-       "214   NaN\n",
-       "215   NaN\n",
-       "Name: 2013, Length: 198, dtype: float64"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "monthly_data[monthly_data[\"Monthly\"] == \"Total\"][\"2013\"]"
+    "# monthly_dict"
    ]
   },
   {
@@ -447,9 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key in monthly_dict.keys():\n",
-    "    year = key.split(\"_\")[0]\n",
-    "    month = key.split(\"_\")[1]\n",
+    "for key in yearly_dict.keys():\n",
+    "    year = key\n",
     "    rows = monthly_data[(monthly_data[\"Monthly\"] == month)]\n",
     "    # print(rows)\n",
     "    # find rows that have \"Surgery Received Person[person]\" in \"Category\"\n",
